--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Home Section -->
     <section id="home">
         <h1>Welcome to My Portfolio</h1>
+        <img src="profile.jpeg" width="200" height="250">
         <p>Hi, I'm B.V.Srilakshmi, a Computer Science Student.</p>
         <nav>
             <a href="#about">About Me</a>
@@ -93,15 +94,20 @@
     <!-- Resume Section -->
     <section id="resume">
         <h2>Resume</h2>
-        <a href="BV-SRILAKSHMI-Resume (1).pdf" download>Download My Resume</a>
+        <a href="B.V.SRILAKSHMI.pdf" download>Download My CV</a>
     </section>
     
     <!-- Contact Section -->
+    
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: biyyapuvenkatasrilakshmi@gmail.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/venkata-sri-lakshmi-biyyapu/">My LinkedIn Profile</a></p>
-        <p>Github: <a href="https://github.com/venkatasrilakshmibiyyapu?tab=repositories">My Github link</a></p>
+        <div class="con">
+        <p><a href="mailto:biyyapuvenkatasrilakshmi@gmail.com"><img src="emaillogo.jpg" width="50" height="50"><h2>&nbsp;biyyapuvenkatasrilakshmi@gmail.com</h2></a></p>
+        <p><a href="https://www.linkedin.com/in/venkata-sri-lakshmi-biyyapu/"><img src="linkedinlogo.jpg" width="50" height="50"><h2>&nbsp;linkedin</h2></a></p>
+        <p><a href="https://github.com/venkatasrilakshmibiyyapu?tab=repositories"><img src="gitlogo.jpg" width="50" height="50"><h2>&nbsp;Github</h2></a></p>
+        <p><a href="tel:8074849115"><img src="calllogo.jpg" width="50" height="50"><h2>&nbsp;8074849115</h2></a></p>
+    </div>
     </section>
+
 </body>
 </html>
